# VitaOxiPad

./: .gitignore  Build.md  Dev_notes.md  README.md
.github/workflows/: ci.yml  latest_release.yml  release.yml  tag_release.yml  test.yml  test.yml.bak
client/: Cargo.toml  config.toml
common/: netprotocol.fbs
gyro_accel_tester/: .gitignore  accel_gyro_tester.py  requirements.txt
server/: CMakeLists.txt
server/include/: ctrl.hpp  draw_helper.hpp  events.hpp  heartbeat.hpp  net.hpp  status.hpp  thread_helper.hpp
server/module/: CMakeLists.txt  kctrl.yml
server/module/include/: kctrl-kernel.h
server/module/src/: main.c
server/src/: client.hpp  ctrl.cpp  ctrl.hpp  draw_helper.cpp  epoll.hpp  events.hpp  heartbeat.hpp  main.cpp  net.cpp  net.hpp  status.cpp  status.hpp  thread_helper.cpp
